# lazyxml

./: .gitignore  Cargo.toml  README.md
src/: event.rs  lib.rs  reader.rs
