[package]
name = "lazyxml"
version = "0.0.2"
authors = ["viri <hi@viri.moe>"]
edition = "2018"
description = "it's like xml parsing, but bad"
documentation = "https://docs.rs/lazyxml"
readme = "README.md"
# homepage = "https://some.website/lazyxml"
repository = "https://github.com/notviri/lazyxml/"
license = "Zlib"
# keywords = []
# categories = []
include = ["src/*.rs", "Cargo.toml"]

[dependencies]
memchr = { version = "2.3", optional = true }

[features]
default = ["use-memchr"]
use-memchr = ["memchr"] # uses the `memchr` crate to enable extremely fast parsing
